Closed
Bug 253280
Opened 21 years ago
Closed 21 years ago
cannot enter Ukrainian letters ghe with upturn (gtk2 frontend)
Categories
(Core Graveyard :: GFX: Gtk, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: eugen, Assigned: eugen)
Details
(Keywords: fixed-aviary1.0, fixed1.7.5)
Attachments
(1 file)
|
1.41 KB,
patch
|
blizzard
:
review+
blizzard
:
superreview+
asa
:
approval-aviary+
mkaply
:
approval1.7.5+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; uk-UA; rv:1.7) Gecko/20040719 Firefox/0.9.1
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; uk-UA; rv:1.7) Gecko/20040719 Firefox/0.9.1
I am unable to enter Ukrainian letters ghe with upturn (U+0491,U+0490) in
Firefox (and Thunderbird, and Mozilla Browser) using gtk2 frontend.
Reproducible: Always
Steps to Reproduce:
1. Run Firefox in Ukrainian locale
2. Try to enter ghe with upturn in input fields
Actual Results:
Nothing
Expected Results:
small or capital Ukrainian letter ghe with upturn shuld appear
| Assignee | ||
Comment 1•21 years ago
|
||
This patch fixes this bug
Updated•21 years ago
|
Component: OS Integration → Internationalization
Product: Firefox → Browser
Version: unspecified → Trunk
Updated•21 years ago
|
Assignee: bugs → blizzard
Status: UNCONFIRMED → NEW
Component: Internationalization → GFX: Gtk
Ever confirmed: true
QA Contact: firefox.os-integration → ian
Comment 2•21 years ago
|
||
Comment on attachment 154460 [details] [diff] [review]
Fix for this bug
Eugeniy, you can request reviews on patches using the patch flags... otherwise
they might slip through the cracks.
Attachment #154460 -
Flags: superreview?(blizzard)
Attachment #154460 -
Flags: review?(blizzard)
Updated•21 years ago
|
Attachment #154460 -
Flags: superreview?(blizzard)
Attachment #154460 -
Flags: superreview+
Attachment #154460 -
Flags: review?(blizzard)
Attachment #154460 -
Flags: review+
Updated•21 years ago
|
Assignee: blizzard → eugen
Comment 3•21 years ago
|
||
Checked in on the trunk.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Comment 4•21 years ago
|
||
Comment on attachment 154460 [details] [diff] [review]
Fix for this bug
This is worth taking on aviary and 1.7 branches, in my opinion (and I'll need
someone to check this in on aviary for me...)
Attachment #154460 -
Flags: approval1.7.2?
Attachment #154460 -
Flags: approval-aviary?
Comment 5•21 years ago
|
||
Comment on attachment 154460 [details] [diff] [review]
Fix for this bug
a=mkaply for 1.7.X
Attachment #154460 -
Flags: approval1.7.2? → approval1.7.2+
Comment 7•21 years ago
|
||
Comment on attachment 154460 [details] [diff] [review]
Fix for this bug
a=asa for checkin to the aviary branch.
Attachment #154460 -
Flags: approval-aviary? → approval-aviary+
Updated•17 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•