Allow entry of Ukrainian letter ghe with upturn.  Bug 253280, patch by Eugeniy Meshcheryakov <eugen@univ.kiev.ua>, r+sr=blizzard